Exemplos/Cidades-v2/K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
  - host: cidades.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
